Bug 998706 - Use proper namespace qualification of MessagePort within NS_IMPL_ADDREF_INHERITED. r=bent